src/objects/Project_AOI__c.object
<CustomObject>
    <description>Project AOI</description>
    <fields>
        <fullName>aoiMaxOtgPrice__c</fullName>
        <description>AOI Max OTG Price</description>
        <inlineHelpText>AOI Max OTG Price</inlineHelpText>
        <label>AOI Max OTG Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>aoiTargetOtgPrice__c</fullName>
        <description>AOI Target OTG Price</description>
        <inlineHelpText>AOI Target OTG Price</inlineHelpText>
        <label>AOI Target OTG Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>caseSafeId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grossAcres__c</fullName>
        <description>Gross acres of AOI</description>
        <inlineHelpText>Gross acres of AOI</inlineHelpText>
        <label>Gross Acres</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isParent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value should be false until a project AOI is input referencing AOI as parent.  Trigger should then update this field to true.  Should not be set manually.</description>
        <label>isParent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>parentAOI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent AOI</label>
        <referenceTo>Project_AOI__c</referenceTo>
        <relationshipLabel>ProjectAOIs</relationshipLabel>
        <relationshipName>ProjectAOIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project AOI</label>
    <listViews>
        <fullName>All</fullName>
        <columns>parentAOI__c</columns>
        <columns>NAME</columns>
        <columns>aoiTargetOtgPrice__c</columns>
        <columns>aoiMaxOtgPrice__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project AOI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProjectAOIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>